@@ -70,6 +70,10 @@ DWORD WINAPI GetDeviceDriverBaseNameW(LPVOID,LPWSTR,DWORD);
 DWORD WINAPI GetDeviceDriverFileNameA(LPVOID,LPSTR,DWORD);
 DWORD WINAPI GetDeviceDriverFileNameW(LPVOID,LPWSTR,DWORD);
 BOOL WINAPI GetProcessMemoryInfo(HANDLE,PPROCESS_MEMORY_COUNTERS,DWORD);
+#if (_WIN32_WINNT >= 0x0501)
+DWORD WINAPI GetProcessImageFileNameA(HANDLE,LPSTR,DWORD);
+DWORD WINAPI GetProcessImageFileNameW(HANDLE,LPWSTR,DWORD);
+#endif
 
 #endif /* not RC_INVOKED */
 
@@ -79,12 +83,18 @@ BOOL WINAPI GetProcessMemoryInfo(HANDLE,PPROCESS_MEMORY_COUNTERS,DWORD);
 #define GetMappedFileName GetMappedFileNameW
 #define GetDeviceDriverBaseName GetDeviceDriverBaseNameW
 #define GetDeviceDriverFileName GetDeviceDriverFileNameW
+#if (_WIN32_WINNT >= 0x0501)
+#define GetProcessImageFileName GetProcessImageFileNameW
+#endif
 #else
 #define GetModuleBaseName GetModuleBaseNameA
 #define GetModuleFileNameEx GetModuleFileNameExA
 #define GetMappedFileName GetMappedFileNameA
 #define GetDeviceDriverBaseName GetDeviceDriverBaseNameA
 #define GetDeviceDriverFileName GetDeviceDriverFileNameA
+#if (_WIN32_WINNT >= 0x0501)
+#define GetProcessImageFileName GetProcessImageFileNameA
+#endif
 #endif
 
 #ifdef __cplusplus
